# unity-js-scopes

./: .bzrignore  CMakeLists.txt  README.md  TODO  vcbuild.bat
debian/: changelog  control  copyright  rules  unity-js-scopes-bindings.install  unity-js-scopes-dev.install  unity-js-scopes-doc.install  unity-js-scopes-examples.install  unity-js-scopes-launcher.install  unity-js-scopes-tool.install
doc/: CMakeLists.txt  generate-doc.py  index.handlebars  yuidoc.json
doc/docbuild/: api.js  data.json  index.html
doc/docbuild/assets/js/: api-filter.js  api-list.js  api-search.js  apidocs.js  yui-prettify.js
doc/docbuild/classes/: ActionMetadata.html  ActivationQuery.html  CategorisedResult.html  Category.html  CategoryRenderer.html  ColumnLayout.html  Department.html  FilterOption.html  OnlineAccountClient.html  OnlineAccountClientServiceStatus.html  OptionSelectorFilter.html  PreviewQuery.html  PreviewReply.html  PreviewWidget.html  Registry.html  Result.html  Scope.html  ScopeMetadata.html  SearchMetaData.html  SearchMetadata.html  SearchQuery.html  SearchReply.html
doc/docbuild/files/: _home_alex_dev_work_webapps_branches_scopes_doc_src_bindings_index.js.html  _home_alex_dev_work_webapps_branches_scopes_doc_src_bindings_src_action-metadata.js.html  _home_alex_dev_work_webapps_branches_scopes_doc_src_bindings_src_activation-query.js.html  _home_alex_dev_work_webapps_branches_scopes_doc_src_bindings_src_categorised-result.js.html  _home_alex_dev_work_webapps_branches_scopes_doc_src_bindings_src_category-renderer.js.html  _home_alex_dev_work_webapps_branches_scopes_doc_src_bindings_src_category.js.html  _home_alex_dev_work_webapps_branches_scopes_doc_src_bindings_src_column-layout.js.html  _home_alex_dev_work_webapps_branches_scopes_doc_src_bindings_src_preview-query.js.html  _home_alex_dev_work_webapps_branches_scopes_doc_src_bindings_src_preview-reply.js.html  _home_alex_dev_work_webapps_branches_scopes_doc_src_bindings_src_preview-widget.js.html  _home_alex_dev_work_webapps_branches_scopes_doc_src_bindings_src_result.js.html  _home_alex_dev_work_webapps_branches_scopes_doc_src_bindings_src_search-metadata.js.html  _home_alex_dev_work_webapps_branches_scopes_doc_src_bindings_src_search-query.js.html  _home_alex_dev_work_webapps_branches_scopes_doc_src_bindings_src_search-reply.js.html
doc/docbuild/modules/: ScopeJS.html
doc/yuidoc-theme/assets/css/: main.css
doc/yuidoc-theme/partials/: index.handlebars  method.handlebars  sidebar.handlebars
examples/filters/: CMakeLists.txt  manifest.json.in
examples/filters/po/: POTFILES.in  POTFILES.in.in
examples/filters/src/: CMakeLists.txt  filters.js
examples/filters/src/data/: filters.ini.in
examples/simple/: simple.ini  simple.js
examples/simple-click/: CMakeLists.txt  manifest.json.in
examples/simple-click/data/: CMakeLists.txt  js-scope.webapps_js-scope.ini.in
examples/simple-click/src/: CMakeLists.txt  js-scope.webapps_js-scope.js  node_modules.tgz
examples/soundcloud/: soundcloud.ini  soundcloud.js
qtc-templates/scope-js/: CMakeLists.txt  wizard.xml
qtc-templates/scope-js/src/: CMakeLists.txt  displayName.js  displayName.js.in
qtc-templates/scope-js/src/data/: displayName-settings.ini.in  displayName.ini.in
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt  index.js
src/bindings/lib/: scope-core.js
src/bindings/src/: action-metadata.cc  action-metadata.h  activation-query-proxy.cc  activation-query-proxy.h  activation-query.cc  activation-query.h  activation-response.cc  activation-response.h  addon.cc  canned-query.cc  canned-query.h  categorised-result.cc  categorised-result.h  category-renderer.cc  category-renderer.h  category.cc  category.h  column-layout.cc  column-layout.h  common.cc  common.h  department.cc  department.h  event_queue.h  filter-group.cc  filter-group.h  filter-option.h  filter-state.h  online-account-client-service-status.h  online-account-client.cc  online-account-client.h  option-selector-filter.cc  option-selector-filter.h  preview-query-proxy.cc  preview-query-proxy.h  preview-query.cc  preview-query.h  preview-reply.cc  preview-reply.h  preview-widget.cc  (+26 more)
src/common/: CMakeLists.txt  config.h
src/launcher/: CMakeLists.txt  config.h.in  main.cc
src/tool/: CMakeLists.txt  config.h.in  main.cc  unity-js-scopes-configure  unity-js-scopes-tool
tests/: CMakeLists.txt
tests/owm_scope/: CMakeLists.txt
tests/owm_scope/scope/: CMakeLists.txt  owm_scope-settings.ini  owm_scope.ini  owm_scope.js
tests/owm_scope/tests/: CMakeLists.txt  test-scope.py
tests/owm_scope/tests/server/: server.py
tests/owm_scope/tests/unit/: CMakeLists.txt  test-scope.py
